// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input "integer" works: integer 1`] = `
{
  "type": "Int",
}
`;

exports[`Input "nonNillableString" works: nonNillableString 1`] = `
{
  "type": "String!",
}
`;

exports[`Input "nonNillableStringWithDefaultValue" works: nonNillableStringWithDefaultValue 1`] = `
{
  "defaultValue": "My default value",
  "type": "String!",
}
`;

exports[`Input "nonNullableString" works: nonNullableString 1`] = `
{
  "type": "String",
}
`;

exports[`Input "nonOptionalObject" works: nonOptionalObject 1`] = `
{
  "type": "MyObject",
}
`;

exports[`Input "nonOptionalString" works: nonOptionalString 1`] = `
{
  "type": "String",
}
`;

exports[`Input "string" works: string 1`] = `
{
  "type": "String",
}
`;
